--- a/src/app/shared/cart-card/cart-card.component.html
+++ b/src/app/shared/cart-card/cart-card.component.html
@@ -17,17 +17,17 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
               <div class="flex flex-col w-full justify-center">
                   <ol class="flex items-center w-full ">
                       <li id="step-chars" (click)="clickShowChar(true)" class="flex w-full cursor-pointer items-center text-white after:content-[''] after:w-full after:h-1 after:border-b after:border-primary-100 after:border-4 after:inline-block">
-                          <span id="circle-chars" class="flex items-center justify-center w-30 h-10 bg-primary-100 rounded-full lg:h-12 lg:w-12 shrink-0">
+                          <span id="circle-chars" class="flex items-center justify-center w-12 h-12 bg-primary-100 rounded-full shrink-0">
                               1
                           </span>                       
                       </li>
                       <li id="step-price" (click)="clickShowPrice(true)" class="flex w-full cursor-pointer items-center text-gray-400 dark:text-white after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-400 after:border-4 after:inline-block">
-                          <span id="circle-price" class="flex items-center justify-center w-30 h-10 bg-white dark:bg-secondary-100 border-2 border-gray-400 rounded-full lg:h-12 lg:w-12 shrink-0">
+                          <span id="circle-price" class="flex items-center justify-center w-12 h-12 bg-white dark:bg-secondary-100 border-2 border-gray-400 rounded-full shrink-0">
                               2
                           </span>
                       </li>
                       <li id="step-terms" (click)="clickShowTerms(true)" class="flex items-center w-fit text-gray-400 dark:text-white cursor-pointer">
-                          <span id="circle-terms" class="flex items-center justify-center w-30 h-10 bg-white dark:bg-secondary-100 border-2 border-gray-400 rounded-full lg:h-12 lg:w-12 shrink-0">
+                          <span id="circle-terms" class="flex items-center justify-center w-12 h-12 bg-white dark:bg-secondary-100 border-2 border-gray-400 rounded-full shrink-0">
                                 3
                           </span>
                       </li>
@@ -48,7 +48,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                   <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="price">
                   @if(check_prices){                    
                       <h5 class="text-3xl font-semibold tracking-tight text-primary-100 ">{{ 'CARD._select_price' | translate }}:</h5>
-                      <div class="grid grid-flow-col gap-8 p-4">
+                      <div class="grid grid-flow-row lg:grid-flow-col gap-8 p-4">
                       @for (price of productOff?.productOfferingPrice; track price.id; let idx = $index) {
                         @if (price.priceType == 'recurring') {
                           <div class="flex items-center">
@@ -112,7 +112,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                   }
                     <div class="flex justify-end">
                         <button (click)="clickShowTerms(false)" type="button" 
-                        class="flex w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
+                        class="flex w-1/3 md:w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
                         {{ 'CARD._next' | translate }}
                         <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -130,13 +130,15 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                             <div class="flex">
                             @if (val?.isDefault == true) {
                             <div class="flex items-center mb-4">
-                              <input checked [id]="'char-radio-'+charidx+validx" (change)="onCharChange(charidx,validx,val)" type="radio" value="" [name]="'char-radio-'+charidx" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
-                              <label [for]="'char-radio-'+charidx+validx" class="ms-2 text-sm font-medium text-gray-900">{{val.value}}</label>
+                              <input checked [id]="'char-radio-'+charidx+validx" (change)="onCharChange(charidx,validx,val)" type="radio" value="" [name]="'char-radio-'+charidx"
+                              class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                              <label [for]="'char-radio-'+charidx+validx" class="ms-2 text-sm font-medium text-gray-900 text-wrap break-all">{{val.value}}</label>
                             </div>
                             } @else {
                               <div class="flex items-center mb-4">
-                                <input [id]="'char-radio-'+charidx+validx" (change)="onCharChange(charidx,validx,val)" type="radio" value="" [name]="'char-radio-'+charidx" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
-                                <label [for]="'char-radio-'+charidx+validx" class="ms-2 text-sm font-medium text-gray-900">{{val.value}}</label>
+                                <input [id]="'char-radio-'+charidx+validx" (change)="onCharChange(charidx,validx,val)" type="radio" value="" [name]="'char-radio-'+charidx"
+                                class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500">
+                                <label [for]="'char-radio-'+charidx+validx" class="ms-2 text-sm font-medium text-gray-900 text-wrap break-all">{{val.value}}</label>
                               </div>
                             }
                           </div>
@@ -157,7 +159,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                   }
                       <div class="flex justify-end">
                           <button (click)="clickShowPrice(false)" type="button" 
-                          class="flex w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
+                          class="flex w-1/3 md:w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
                           {{ 'CARD._next' | translate }}
                           <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -178,7 +180,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                       </div>
                       <div class="flex justify-end">
                           <button [disabled]="!selected_terms" [ngClass]="!selected_terms ? 'opacity-50' : 'hover:bg-primary-50'" (click)="addProductToCart(productOff,true)" type="button" 
-                          class="flex w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
+                          class="flex w-1/2 md:w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
                           {{ 'CARD._checkout' | translate }}
                           <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -198,7 +200,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                       </div>
                       <div class="flex justify-end">
                           <button (click)="addProductToCart(productOff,true)" type="button" 
-                          class="flex w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
+                          class="flex w-1/2 md:w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
                           {{ 'CARD._checkout' | translate }}
                           <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
