--- a/src/app/pages/admin/categories/categories.component.html
+++ b/src/app/pages/admin/categories/categories.component.html
@@ -98,7 +98,7 @@
                     <th scope="col" class="flex px-6 py-3 w-2/4">
                         {{ 'ADMIN._name' | translate }}
                     </th>
-                    <th scope="col" class="flex px-6 py-3 w-fit">
+                    <th scope="col" class="hidden md:flex px-6 py-3 w-fit">
                         {{ 'ADMIN._status' | translate }}
                     </th>
                     <th scope="col" class="hidden md:table-cell px-6 py-3 w-fit">
@@ -115,7 +115,7 @@
                         <td class="flex px-6 py-4 w-2/4">
                             <b>{{cat.name}}</b>
                         </td>
-                        <td class="px-6 py-4 w-fit">
+                        <td class="hidden md:flex px-6 py-4 w-fit">
                             @if(cat.lifecycleStatus == 'Active'){
                                 <span class="bg-blue-100 dark:bg-secondary-300 text-blue-600 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{cat.lifecycleStatus}}</span>
                             } @else if(cat.lifecycleStatus == 'Launched') {
