--- a/src/app/pages/admin/categories/create-category/create-category.component.html
+++ b/src/app/pages/admin/categories/create-category/create-category.component.html
@@ -28,26 +28,28 @@
   <div class="bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 mt-4 p-8 rounded-lg">
     <h2 class="text-3xl font-bold text-primary-100 ml-4 dark:text-white">{{ 'CREATE_CATEGORIES._new' | translate }}</h2>
     <hr class="h-px m-4 bg-gray-300 dark:bg-gray-200 border-0">
-    <div class="grid grid-cols-20/80">
-        <div class="flex flex-col mr-4">
-            <h2 class="text-xl font-bold text-black mb-4 dark:text-white">{{ 'CREATE_CATEGORIES._steps' | translate }}</h2>
-            <button id="general-info" (click)="toggleGeneral()" [disabled]="!generalDone"  class="grid grid-cols-20/80 mb-2 text-primary-100 dark:text-primary-50">
-                <span id="general-circle" class="flex items-center justify-center w-8 h-8 border border-2 border-primary-100 dark:border-primary-50 rounded-full shrink-0">
+    <div class="md:grid md:grid-cols-20/80">
+        <div class="flex sm:flex-row md:flex-col md:mr-4 w-full md:w-fit overflow-x-auto">
+            <h2 class="hidden md:block text-xl font-bold text-black mb-4 dark:text-white">{{ 'CREATE_CATEGORIES._steps' | translate }}</h2>
+            <button id="general-info" (click)="toggleGeneral()" [disabled]="!generalDone"
+            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-primary-100 dark:text-primary-50 justify-items-center md:justify-items-start">
+                <span id="general-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-primary-100 dark:border-primary-50 rounded-full shrink-0">
                     1
                 </span>
                 <span>
-                    <h3 class="flex leading-tight justify-start">{{ 'CREATE_CATEGORIES._general' | translate }}</h3>
-                    <p class="flex text-xs justify-start">{{ 'CREATE_CATEGORIES._general_info' | translate }}</p>
+                    <h3 class="flex sm:text-center md:text-start">{{ 'CREATE_CATEGORIES._general' | translate }}</h3>
+                    <p class="hidden xl:flex text-xs sm:text-center md:text-start">{{ 'CREATE_CATEGORIES._general_info' | translate }}</p>
                 </span>
             </button>
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
-            <button id="summary" [disabled]="true" class="grid grid-cols-20/80 mb-2 text-gray-500">
-                <span id="summary-circle" class="flex items-center justify-center w-8 h-8 border border-2 border-gray-400 rounded-full shrink-0">
+            <button id="summary" [disabled]="true"
+            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-40/60 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
+                <span id="summary-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
                     2
                 </span>
                 <span>
                     <h3 class="flex leading-tight justify-start">{{ 'CREATE_CATEGORIES._finish' | translate }}</h3>
-                    <p class="flex text-xs justify-start">{{ 'CREATE_CATEGORIES._summary' | translate }}</p>
+                    <p class="hidden xl:flex text-xs justify-start text-start">{{ 'CREATE_CATEGORIES._summary' | translate }}</p>
                 </span>
             </button>
         </div>
@@ -83,13 +85,13 @@
                                             </svg>                                          
                                             <span class="sr-only">Add list</span>
                                         </button>
-                                        <button (click)="addOrderedList()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addOrderedList()" type="button" class="hidden lg:block p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6h8m-8 6h8m-8 6h8M4 16a2 2 0 1 1 3.321 1.5L4 20h5M4 5l2-1v6m-2 0h4"/>
                                             </svg>                                          
                                             <span class="sr-only">Add ordered list</span>
                                         </button>
-                                        <button (click)="addBlockquote()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addBlockquote()" type="button" class="hidden md:block p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                                                 <path fill-rule="evenodd" d="M5 6a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H6a1 1 0 0 1-1-1Zm0 12a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H6a1 1 0 0 1-1-1Zm1.65-9.76A1 1 0 0 0 5 9v6a1 1 0 0 0 1.65.76l3.5-3a1 1 0 0 0 0-1.52l-3.5-3ZM12 10a1 1 0 0 1 1-1h5a1 1 0 1 1 0 2h-5a1 1 0 0 1-1-1Zm0 4a1 1 0 0 1 1-1h5a1 1 0 1 1 0 2h-5a1 1 0 0 1-1-1Z" clip-rule="evenodd"/>
                                             </svg>                                         
@@ -101,25 +103,25 @@
                                             </svg>                                         
                                             <span class="sr-only">Add table</span>
                                         </button>                                 
-                                        <button (click)="addCode()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addCode()" type="button" class="hidden md:block p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 8-4 4 4 4m8 0 4-4-4-4m-2-3-4 14"/>
                                             </svg>                                        
                                             <span class="sr-only">Add code</span>
                                         </button>
-                                        <button (click)="addCodeBlock()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addCodeBlock()" type="button" class="hidden md:block p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 3v4a1 1 0 0 1-1 1H5m5 4-2 2 2 2m4-4 2 2-2 2m5-12v16a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V7.914a1 1 0 0 1 .293-.707l3.914-3.914A1 1 0 0 1 9.914 3H18a1 1 0 0 1 1 1Z"/>
                                               </svg>                                                                                  
                                             <span class="sr-only">Add code block</span>
                                         </button>
-                                        <button (click)="addLink()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addLink()" type="button" class="hidden md:block p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.213 9.787a3.391 3.391 0 0 0-4.795 0l-3.425 3.426a3.39 3.39 0 0 0 4.795 4.794l.321-.304m-.321-4.49a3.39 3.39 0 0 0 4.795 0l3.424-3.426a3.39 3.39 0 0 0-4.794-4.795l-1.028.961"/>
                                             </svg>                                                                                
                                             <span class="sr-only">Add link</span>
                                         </button>
-                                        <button (click)="showEmoji=!showEmoji;$event.stopPropagation();" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="showEmoji=!showEmoji;$event.stopPropagation();" type="button" class="hidden lg:block p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                                                 <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM13.5 6a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm-7 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm3.5 9.5A5.5 5.5 0 0 1 4.6 11h10.81A5.5 5.5 0 0 1 10 15.5Z"/>
                                             </svg>
@@ -179,7 +181,7 @@
                                         <th scope="col" class="flex px-6 py-3 w-3/5">
                                             {{ 'CREATE_OFFER._name' | translate }}
                                         </th>
-                                        <th scope="col" class="flex px-6 py-3 w-fit">
+                                        <th scope="col" class="hidden md:flex px-6 py-3 w-fit">
                                             {{ 'CREATE_OFFER._last_update' | translate }}
                                         </th>
                                         <th scope="col" class="flex px-6 py-3 w-fit">
@@ -193,7 +195,7 @@
                                             <td class="flex px-6 py-4 w-3/5">
                                                 <b>{{cat.name}}</b>
                                             </td>
-                                            <td class="flex px-6 py-4 w-fit">
+                                            <td class="hidden md:flex px-6 py-4 w-fit">
                                                 {{cat.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
                                             </td>
                                             <td class="flex px-6 py-4 w-fit justify-end">
