--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -26,8 +26,10 @@
     <!-- End Breadcrumb -->
 
     <!-- START HEADER CARD -->
-    <div class="w-full h-[320px] mb-4 bg-secondary-50 rounded-lg dark:bg-secondary-100 dark:border-gray-800 border-secondary-50 border grid grid-cols-60/40">
-
+    <div class="w-full h-fit lg:h-[320px] mb-4 bg-secondary-50 rounded-lg dark:bg-secondary-100 dark:border-gray-800 border-secondary-50 border lg:grid lg:grid-cols-60/40">
+        <div class="flex lg:hidden overflow-hidden justify-center items-center bg-white rounded-t-lg h-[318px]">
+            <img class="rounded-r-lg h-5/6 w-5/6 object-contain" src="{{getProductImage()}}" alt="product image" />
+        </div>
         <div class="grid grid-rows-5 p-4 md:p-8 h-full">
             <div class="mt-2">
                 <!--<a href="#">-->
@@ -76,13 +78,13 @@
                 </a>
             </div>
         </div>
-        <div class="overflow-hidden flex justify-center items-center bg-white rounded-r-lg h-[318px]">
+        <div class="hidden lg:flex overflow-hidden justify-center items-center bg-white rounded-r-lg h-[318px]">
             <img class="rounded-r-lg h-5/6 w-5/6 object-contain" src="{{getProductImage()}}" alt="product image" />
         </div>
     </div>
 <!-- END HEADER CARD -->
     <div id="tabs-container" class=" sticky top-[72px] z-10 w-full h-full bg-secondary-50 rounded-t-lg pt-4 pr-4 pl-4 dark:bg-secondary-100 dark:border-gray-800 border-secondary-50 border-t">
-        <div class="w-full text-sm font-medium text-center text-gray-600 dark:text-white border-b border-gray-300 dark:border-white inline-flex justify-between">
+        <div class="inline-flex overflow-x-auto overflow-y-hidden w-full text-sm font-medium text-center text-gray-600 dark:text-white border-b border-gray-300 dark:border-white justify-between">
             <ul class="flex flex-wrap -mb-px">
                 <li class="mr-2">
                     <button id="details-button" (click)="goToDetails(true)"
@@ -124,7 +126,7 @@
                 }
             </ul>
             @if(check_logged){
-            <button type="button" (click)="toggleCartSelection();$event.stopPropagation();" class="w-fit m-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            <button type="button" (click)="toggleCartSelection();$event.stopPropagation();" class="hidden md:flex w-fit m-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                 <svg class="w-3.5 h-3.5 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
                 <path d="M15 12a1 1 0 0 0 .962-.726l2-7A1 1 0 0 0 17 3H3.77L3.175.745A1 1 0 0 0 2.208 0H1a1 1 0 0 0 0 2h.438l.6 2.255v.019l2 7 .746 2.986A3 3 0 1 0 9 17a2.966 2.966 0 0 0-.184-1h2.368c-.118.32-.18.659-.184 1a3 3 0 1 0 3-3H6.78l-.5-2H15Z"/>
                 </svg>
@@ -132,11 +134,19 @@
             </button>
             }
         </div>
+        @if(check_logged){
+            <button type="button" (click)="toggleCartSelection();$event.stopPropagation();" class="flex md:hidden justify-end w-fit m-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                <svg class="w-3.5 h-3.5 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
+                <path d="M15 12a1 1 0 0 0 .962-.726l2-7A1 1 0 0 0 17 3H3.77L3.175.745A1 1 0 0 0 2.208 0H1a1 1 0 0 0 0 2h.438l.6 2.255v.019l2 7 .746 2.986A3 3 0 1 0 9 17a2.966 2.966 0 0 0-.184-1h2.368c-.118.32-.18.659-.184 1a3 3 0 1 0 3-3H6.78l-.5-2H15Z"/>
+                </svg>
+                {{ 'CARD._add_cart' | translate }}
+            </button>
+            }
     </div>      
 
     <div class="w-full h-full bg-secondary-50 rounded-b-lg p-4 dark:bg-secondary-100 dark:border-gray-800 border-secondary-50 border-b">        
 
-        <div id="desc-container" class="w-full bg-secondary-50/95 dark:bg-secondary-100/95 rounded-lg p-12">
+        <div id="desc-container" class="w-full bg-secondary-50/95 dark:bg-secondary-100/95 rounded-lg p-8 lg:p-12">
 
             <div id="details-container">            
                 <h2 #detailsContent class="text-4xl font-extrabold text-primary-100 dark:text-primary-50 text-center pb-4">Description</h2>
@@ -171,27 +181,27 @@
             <div class="container mx-auto px-4">
                 <div class="flex flex-wrap -mx-4">
                     @for (char of complianceProf; track char.id) {
-                        <div class="w-1/3 px-4 mb-8">                
+                        <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-8">                
                             <div class="border border-2 rounded-lg shadow bg-white dark:bg-secondary-200 shadow-md p-8 h-full"
                             [ngClass]="char.href == '#' ? 'border-red-400 dark:border-red-800' : (isVerified(char) && char.domesupported == true ? 'border-green-400' : 'border-gray-400')">
                                 <h3 class="text-2xl font-bold mb-4 dark:text-white">{{char.name}}</h3>
                                 <div class="flex justify-between">
                                     @if (char.href == '#') {
-                                        <a class="text-xs ml-4 font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-red-200 dark:bg-red-800 dark:text-white text-red-700">
+                                        <a class="text-xs ml-4 font-small md:font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-red-200 dark:bg-red-800 dark:text-white text-red-700">
                                             Not achieved yet
                                         </a>
                                         <!-- TODO: ADD EXPIRED when dome supported certs are expired-->
                                     } @else {
-                                        <a class="mb-2 font-normal pl-4 text-primary-100" target="_blank" href="{{char.href}}">
+                                        <a class="mb-2 font-small md:font-medium pl-4 text-primary-100" target="_blank" href="{{char.href}}">
                                             {{char.value}}
                                         </a>
                                         @if(!char.domesupported || !isVerified(char)) {
-                                            <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-gray-400 dark:bg-gray-700 dark:text-white text-gray-900">
+                                            <a class="text-xs font-small md:font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-gray-400 dark:bg-gray-700 dark:text-white text-gray-900">
                                                 Self declared
                                             </a>
                                         }
                                         @if(char.domesupported == true && isVerified(char)){
-                                            <a class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-green-200 text-green-700">
+                                            <a class="text-xs font-small md:font-medium inline-flex items-center px-2.5 py-0.5 rounded-md mb-2 bg-green-200 text-green-700">
                                                 Dome verified
                                             </a>
                                         }
@@ -209,7 +219,7 @@
             </div>
 
             <h2 class="text-4xl font-extrabold text-primary-100 dark:text-primary-50 text-center pb-8 pt-12">Product pricing</h2>
-            <div class="grid grid-flow-col auto-cols-auto justify-items-center p-2">
+            <div class="grid grid-flow-row gap-4 lg:grid-flow-col lg:auto-cols-auto justify-items-center p-2">
             @if(productOff?.productOfferingPrice != undefined){
                 @for (price of productOff?.productOfferingPrice; track price.id) {
                     @if (price.priceType == 'recurring') {
@@ -261,7 +271,7 @@
                 <div class="container mx-auto px-4">
                     <div class="flex flex-wrap -mx-4">
                         @for (char of prodSpec.productSpecCharacteristic; track char.id; let idx = $index) {
-                            <div class="w-1/3 px-4 mb-8">                
+                            <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-8">                
                                 <div class="border border-gray-200 rounded-lg shadow bg-white dark:bg-secondary-200 dark:border-gray-800 shadow-md p-8 h-full">
                                     <h3 class="text-2xl font-bold mb-4 dark:text-white">{{char.name}}</h3>
                                     @for (val of char?.productSpecCharacteristicValue; track val.value) {
@@ -311,7 +321,7 @@
         <div id="attach-container" class="container mx-auto px-4">
             <div class="flex flex-wrap -mx-4">
                 @for (att of attatchments; track att.id) {
-                    <div class="w-1/3 px-4 mb-8">                
+                    <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-8">                
                         <div class="border border-gray-200 rounded-lg shadow bg-white dark:bg-secondary-200 dark:border-gray-800 shadow-md p-8 h-full">
                             <h3 class="text-2xl font-bold mb-4 dark:text-white">{{att.name}}</h3>
                             <label class="ms-2 text-sm font-medium text-gray-700 text-wrap break-all dark:text-gray-200">{{att.url}}</label>
@@ -319,7 +329,7 @@
                     </div>
                 } @empty {
                     <div class="flex justify-center items-center w-full">
-                        <div class="flex items-center w-1/2 p-4 mb-4 text-sm text-primary-100 rounded-lg bg-white border border-gray-200 shadow-md dark:bg-secondary-200 dark:text-primary-50" role="alert">
+                        <div class="flex items-center w-full md:w-1/2 p-4 mb-4 text-sm text-primary-100 rounded-lg bg-white border border-gray-200 shadow-md dark:bg-secondary-200 dark:text-primary-50" role="alert">
                           <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
                           </svg>
@@ -366,7 +376,7 @@
             <div id="relationships-container" class="container mx-auto px-4">
                 <div class="flex flex-wrap -mx-4">
                     @for (rel of prodSpec.productSpecificationRelationship; track rel.id) {
-                        <div class="w-1/3 px-4 mb-8">                
+                        <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-8">                
                             <div class="border border-gray-200 rounded-lg shadow bg-white dark:bg-secondary-200 dark:border-gray-800 shadow-md p-8 h-full">
                                 <h3 class="text-2xl font-bold mb-4 dark:text-white">{{rel.name}}</h3>                                
                                 <div class="flex justify-between">
