--- a/src/app/shared/categories-recursion-list/categories-recursion-list.component.html
+++ b/src/app/shared/categories-recursion-list/categories-recursion-list.component.html
@@ -4,7 +4,7 @@
     <td class="flex px-6 py-4 w-2/4">
         {{path}} / <b>{{child.name}}</b>
     </td>
-    <td class="flex px-6 py-4 w-fit">
+    <td class="hidden md:flex px-6 py-4 w-fit">
         @if(child.lifecycleStatus == 'Active'){
             <span class="h-fit bg-blue-100 dark:bg-secondary-300 text-blue-600 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{child.lifecycleStatus}}</span>
         } @else if(child.lifecycleStatus == 'Launched') {
@@ -15,7 +15,7 @@
             <span class="h-fit bg-blue-100 dark:bg-secondary-300 text-red-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-red-500">{{child.lifecycleStatus}}</span>
         }
     </td>
-    <td class="flex px-6 py-4 w-fit">
+    <td class="hidden md:flex px-6 py-4 w-fit">
         {{child.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
     </td> 
     <td class="flex px-6 py-4 w-fit justify-end">
