ADD privacy and terms links + fix prod details + fix get only launched catalogs

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,10 +6,10 @@
       <a href="https://dome-marketplace.eu/about/" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._about' | translate }}</a>
     </li>
     <li>
-      <a href="#" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._privacy' | translate }}</a>
+      <a href="../assets/privacy.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._privacy' | translate }}</a>
     </li>
     <li>
-      <a href="#" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._licensing' | translate }}</a>
+      <a href="../assets/terms.pdf" target="_blank" class="mr-4 hover:underline md:mr-6">{{ 'FOOTER._licensing' | translate }}</a>
     </li>
     <li>
       <a href="https://app.getonepass.eu/invite/8Zw5HETsNr" target="_blank" class="hover:underline">{{ 'FOOTER._contact' | translate }}</a>
