--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -26,7 +26,7 @@
     <!-- End Breadcrumb -->
 
     <!-- START HEADER CARD -->
-    <div class="w-full h-[320px] mb-4 bg-secondary-50 rounded-lg dark:bg-secondary-100 dark:border-gray-800 border-secondary-50 border grid grid-cols-60/40">
+    <div class="w-full h-[330px] mb-4 bg-secondary-50 rounded-lg dark:bg-secondary-100 dark:border-gray-800 border-secondary-50 border grid grid-cols-60/40">
 
         <div class="grid grid-rows-5 p-4 md:p-8 h-full">
             <div class="mt-2">
@@ -34,9 +34,9 @@
                 <h5 class="md:text-3xl lg:text-4xl font-semibold tracking-tight text-primary-100 dark:text-white">{{productOff?.name}}</h5>
                 <!--</a>-->
             </div>
-            <markdown class="pt-2 line-clamp-2 max-h-16 dark:text-gray-200" [data]="productOff?.description"></markdown>
+            <markdown class="pt-2 line-clamp-2 max-h-19 dark:text-gray-200" [data]="productOff?.description"></markdown>
             <div class="grid grid-cols-2">
-                <div class="min-h-19 pt-2 dark:text-gray-300">V: {{productOff?.version || 'latest'}}</div>
+                <div class="h-fit pt-2 dark:text-gray-300">V: {{productOff?.version || 'latest'}}</div>
                 <div class="flex items-center justify-end">
                     <svg class="w-4 h-4 text-yellow-300 mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
                       <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
@@ -57,9 +57,6 @@
                 </div>
             </div>
             <div>
-
-            </div>
-            <div>
                 @for (cat of categories; track cat.id) {
                     <bae-badge class="mr-2" [category]=cat></bae-badge>
                 }
@@ -76,7 +73,7 @@
                 </a>
             </div>
         </div>
-        <div class="overflow-hidden flex justify-center items-center bg-white rounded-r-lg h-[318px]">
+        <div class="overflow-hidden flex justify-center items-center bg-white rounded-r-lg h-[328px]">
             <img class="rounded-r-lg h-5/6 w-5/6 object-contain" src="{{getProductImage()}}" alt="product image" />
         </div>
     </div>
@@ -314,7 +311,9 @@
                     <div class="w-1/3 px-4 mb-8">                
                         <div class="border border-gray-200 rounded-lg shadow bg-white dark:bg-secondary-200 dark:border-gray-800 shadow-md p-8 h-full">
                             <h3 class="text-2xl font-bold mb-4 dark:text-white">{{att.name}}</h3>
-                            <label class="ms-2 text-sm font-medium text-gray-700 text-wrap break-all dark:text-gray-200">{{att.url}}</label>
+                            <a class="mb-2 font-normal pl-4 text-primary-100 text-wrap break-all" target="_blank" href="{{att.url}}">
+                                {{att.url}}
+                            </a>
                         </div>
                     </div>
                 } @empty {
